--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
-    Author: Kaish
+    Author: Ravish
     File Name: index.html
-    Version: 2020-09-02
+    Version: 2021-08-01
 -->
 
 <!DOCTYPE html>
